# front-3drendered-image-realtime-be-processing-test

./: README.md
backend/: .gitignore  README.md  ai.py  image_utils.py  pyproject.toml  server.py
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.tsx
frontend/app/src/components/scenes/: TestScene.tsx
frontend/app/src/types/: Three.ts
frontend/app/src/utils/three/: ObjectFactory.ts  OrbitControls.js  SceneManager.ts
